# GOTS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GOTS_IMPLEMENTATION_TICKETS.md  MONITORING.md  OKTA_ADMIN_ROLE_SETUP.md  OKTA_JWKSET_SETUP.md  OKTA_OAUTH_COMPLETE_SETUP.md  OKTA_OAUTH_SCOPES.md  README.md  TROUBLESHOOTING_403.md  alertmanager-config-example.yaml  check_okta_grants.py  config.example.yaml  convert_public_key_to_jwk.py  docker-compose.yml  grafana-okta-team-sync.md  prometheus-alerts.yaml  pyproject.toml  test_grafana_permissions.py
.github/workflows/: ci.yml  docker.yml  release.yml
helm/gots/: Chart.yaml  README.md  values.yaml
helm/gots/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml
src/: __init__.py  config.py  grafana_client.py  main.py  metrics_server.py  okta_client.py  sync_service.py  utils.py
tests/: __init__.py  test_config.py  test_grafana_client.py  test_main.py  test_metrics_server.py  test_okta_client.py  test_sync_service.py  test_utils.py
